Correct h1 alignment in style.css
Fix alignment property in h1 style.

--- a/style.css
+++ b/style.css
@@ -6,4 +6,5 @@
 }
 h1{
   border:solid 2px black
+  align:center 
 }
